@@ -1,3 +1,9 @@
+1560.   [bug]       fdupont
+	-- Applied via patch ---
+	kea-dhcp4 now permits option code values of 0 and 255 for
+	defined in option spaces other than the "dhcp4" space.
+	(Gitlab #564,!300, git 7a0a0b84d91893f08c0ee6f236daa05bede65166)
+
 Kea 1.5.0 released on Dec 14, 2018
 
 1506.	[build]		marcin
